--- a/app/roster.html
+++ b/app/roster.html
@@ -21,6 +21,18 @@
 			a:hover {color:#FF00FF;}
 			a:active {color:#0000FF;}
 		</style>
+		<style>
+		table, td, th
+        {
+		border:1px solid green;
+        }
+
+        th
+        {
+		background-color:green;
+        color:white;
+        }
+		</style>
 	</head>
 
 		<h1>Roster</h1>
