--- a/app/roster.html
+++ b/app/roster.html
@@ -24,12 +24,12 @@
 		<style>
 		table, td, th
         {
-		border:1px solid green;
+		border:black;
         }
 
         th
         {
-		background-color:green;
+		background-color:black;
         color:white;
         }
 		</style>
