--- a/app/app.html
+++ b/app/app.html
@@ -28,12 +28,12 @@
 		<style>
 		table, td, th
         {
-		border:1px solid green;
+		border:black;
         }
 
         th
         {
-		background-color:green;
+		background-color:black;
         color:white;
         }
 		</style>
