--- a/app/app.html
+++ b/app/app.html
@@ -13,7 +13,7 @@
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> <!-- For datepickers -->
 		<style type="text/css">
-			body {background-color: palegreen}
+			body {background-color: lightskyblue}
 			h1 {background-color: mediumslateblue}
 			h2 {background-color: transparent}
 			p {background-color: hotpink}
