--- a/app/style.html
+++ b/app/style.html
@@ -3,6 +3,18 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Roster</title>
+	<style type="text/css">
+		table, td, th
+        {
+		border:black;
+        }
+
+        th
+        {
+		background-color:black;
+        color:white;
+        }
+	</style>
 </head>
 <body>
 	<h1>Roster</h1>
