--- a/app/roster.html
+++ b/app/roster.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="../assets/moment.min.js"></script>
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<style type="text/css">
-			body {background-color: palegreen}
+			body {background-color: lightskyblue}
 			h1 {background-color: mediumslateblue}
 			h2 {background-color: transparent}
 			p {background-color: hotpink}
