--- a/app/roster.html
+++ b/app/roster.html
@@ -22,16 +22,35 @@
 			a:active {color:#0000FF;}
 		</style>
 		<style>
-		table, td, th
-        {
-		border:black;
-        }
+		#customers
+  {
+  font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+  width:100%;
+  border-collapse:collapse;
+  }
 
-        th
-        {
-		background-color:black;
-        color:white;
-        }
+#customers td, #customers th
+  {
+  font-size:1em;
+  border:1px solid #98bf21;
+  padding:3px 7px 2px 7px;
+  }
+
+#customers th
+  {
+  font-size:1.1em;
+  text-align:left;
+  padding-top:5px;
+  padding-bottom:4px;
+  background-color:#A7C942;
+  color:#ffffff;
+  }
+
+#customers tr.alt td
+  {
+  color:#000000;
+  background-color:#EAF2D3;
+  }
 		</style>
 	</head>
 
