--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,13 @@
 		<script type="text/javascript" src="../assets/promise.min.js"></script>
 		<script type="text/javascript" src="../assets/moment.min.js"></script>
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
+		<style type="text/css">
+			body {background-color: lightskyblue}
+			h1 {background-color: mediumslateblue}
+			h2 {background-color: transparent}
+			p {background-color: hotpink}
+			p.no2 {background-color: gray; padding: 20px;}
+		</style>
 	</head>
 	<body>
 		<!-- Header -->
