--- a/app/join.html
+++ b/app/join.html
@@ -20,6 +20,13 @@
 			}
 
 		</style>
+		<style type="text/css">
+			body {background-color: lightskyblue}
+			h1 {background-color: mediumslateblue}
+			h2 {background-color: transparent}
+			p {background-color: hotpink}
+			p.no2 {background-color: gray; padding: 20px;}
+		</style>
 
 	</head>
 	<body>
