--- a/app/scores.html
+++ b/app/scores.html
@@ -41,12 +41,18 @@
 			}
 
 		</style>
-		<style type="text/css">
+        <style type="text/css">
 			body {background-color: lightskyblue}
 			h1 {background-color: mediumslateblue}
 			h2 {background-color: transparent}
 			p {background-color: hotpink}
 			p.no2 {background-color: gray; padding: 20px;}
+		</style>
+		<style>
+			a:link {color:#FF0000;}
+			a:visited {color:#FF0000;}
+			a:hover {color:#FF00FF;}
+			a:active {color:#0000FF;}
 		</style>
 
 	</head>
