--- a/app/app.html
+++ b/app/app.html
@@ -13,10 +13,10 @@
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> <!-- For datepickers -->
 		<style type="text/css">
-			body {background-color: lightskyblue}
+			body {background-color: lightsteelblue}
 			h1 {background-color: mediumslateblue}
 			h2 {background-color: transparent}
-			p {background-color: hotpink}
+			p {background-color: pink}
 			p.no2 {background-color: gray; padding: 20px;}
 		</style>
 		<style>
@@ -98,7 +98,7 @@
 		</div>
 
 		<h2>Create Leagues</h2>	
-		<a href="join.html"><button>Create a New League</button></a>
+		<a href="join.html"><button class="a_demo_one">Create a New League</button></a>
 		<div id="newLeague" v-show="false"> <!-- Remove the v-show attribute to show container again -->
 			<input v-model="sim" type="checkbox">
 			<label>Simulation - Play a game using historic data (for debugging or demo purposes)</label>
