--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,10 @@
 		<script type="text/javascript" src="../assets/moment.min.js"></script>
 		<script type="text/javascript" src="../assets/jquery-3.1.1.min.js"></script>
 		<style type="text/css">
-			body {background-color: lightskyblue}
+			body {background-color: lightsteelblue}
 			h1 {background-color: mediumslateblue}
 			h2 {background-color: transparent}
-			p {background-color: hotpink}
+			p {background-color: pink}
 			p.no2 {background-color: gray; padding: 20px;}
 		</style>
 		<style>
