--- a/app/scores.html
+++ b/app/scores.html
@@ -42,10 +42,10 @@
 
 		</style>
         <style type="text/css">
-			body {background-color: lightskyblue}
+			body {background-color: lightsteelblue}
 			h1 {background-color: mediumslateblue}
 			h2 {background-color: transparent}
-			p {background-color: hotpink}
+			p {background-color: pink}
 			p.no2 {background-color: gray; padding: 20px;}
 		</style>
 		<style>
