--- a/app/style.html
+++ b/app/style.html
@@ -15,6 +15,9 @@
         color:white;
         }
 	</style>
+	<style>
+			body {background-color: lightsteelblue}
+	</style>
 </head>
 <body>
 	<h1>Roster</h1>
