--- a/app/join.html
+++ b/app/join.html
@@ -80,7 +80,7 @@
 
 			<h2>Start a New League</h2>
 			<input id="league-name" type="text" placeholder="League Name">
-			<button id="create-button">Start League</button>
+			<button class="a_demo_one" id="create-button">Start League</button>
 
 			<h2>Leagues You Started</h2>
 			<p>Invite your friends to join your leagues. When you have everyone, click Begin to start playing!</p>
