--- a/app/scores.html
+++ b/app/scores.html
@@ -68,7 +68,7 @@
 
 		<section id="login">
 			<h2>Login</h2>
-			<button id="login-button">Google Login</button>
+			<button class="a_demo_one" id="login-button">Google Login</button>
 		</section>
 
 		<section id="page">
