--- a/app/style.html
+++ b/app/style.html
@@ -99,7 +99,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<button>Update Lineup</button> <button>Update Roster</button> <button>Revert Change</button> <button>Check Updates</button>
+		<button class="a_demo_one">Update Lineup</button> <button class="a_demo_one">Update Roster</button> <button class="a_demo_one">Revert Change</button> <button>Check Updates</button>
 	</div>
 	<div id="allPlayers">
 		<table>
@@ -258,7 +258,7 @@
 					<td>None</td>
 					<td>
 						<div>
-							<button>Swap</button> 
+							<button class="a_demo_one">Swap</button>
 							<div><a>person 1</a> <a>person 2</a> <a>person 3</a> <a>person 4</a> <a>person 5</a></div>
 						</div>
 					</td>
@@ -273,7 +273,7 @@
 					<td>None</td>
 					<td>
 						<div>
-							<button>Swap</button> 
+							<button class="a_demo_one">Swap</button>
 							<div><a>person 1</a> <a>person 2</a> <a>person 3</a> <a>person 4</a> <a>person 5</a></div>
 						</div>
 					</td>
@@ -288,7 +288,7 @@
 					<td>None</td>
 					<td>
 						<div>
-							<button>Swap</button> 
+							<button class="a_demo_one">Swap</button>
 							<div><a>person 1</a> <a>person 2</a> <a>person 3</a> <a>person 4</a> <a>person 5</a></div>
 						</div>
 					</td>
@@ -303,7 +303,7 @@
 					<td>testuser0001</td>
 					<td>
 						<div>
-							<button disabled="disabled">Swap</button> 
+							<button class="a_demo_one" disabled="disabled">Swap</button>
 							<div><a>person 1</a> <a>person 2</a> <a>person 3</a> <a>person 4</a> <a>person 5</a></div>
 						</div>
 					</td>
@@ -318,7 +318,7 @@
 					<td>None</td>
 					<td>
 						<div>
-							<button>Swap</button> 
+							<button >Swap</button>
 							<div><a>person 1</a> <a>person 2</a> <a>person 3</a> <a>person 4</a> <a>person 5</a></div>
 						</div>
 					</td>
