--- a/app/join.html
+++ b/app/join.html
@@ -20,6 +20,19 @@
 			}
 
 		</style>
+		<style>
+            body{text-align:center}
+        </style>
+		<style>
+		.style{
+         width: 800px;
+         height: 100px;
+         margin: 0px auto;
+         margin-bottom:20px;
+         border:1px solid #96C2F1;
+         background-color: #EFF7FF
+         }
+			</style>
 		<style type="text/css">
 			body {background-color: lightsteelblue}
 			h1 {background-color: mediumslateblue}
