--- a/app/scores.html
+++ b/app/scores.html
@@ -41,6 +41,9 @@
 			}
 
 		</style>
+		<style>
+            body{text-align:center}
+        </style>
         <style type="text/css">
 			body {background-color: lightsteelblue}
 			h1 {background-color: mediumslateblue}
