--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,9 @@
 	background-image: linear-gradient(bottom, rgb(171,27,27) 100%, rgb(212,51,51) 0%);
 }
 		</style>
+		<style>
+            body{text-align:center}
+        </style>
 	</head>
 	<body>
 		<!-- Header -->
