--- a/app/index.html
+++ b/app/index.html
@@ -25,26 +25,27 @@
 		</style>
 		<style>
 			 .a_demo_one {
-	background-color:#ba2323;
-	padding:10px;
-	position:relative;
-	font-family: 'Open Sans', sans-serif;
-	font-size:12px;
-	text-decoration:none;
-	color:#fff;
-	border: solid 1px #831212;
-	background-image: linear-gradient(bottom, rgb(171,27,27) 0%, rgb(212,51,51) 100%);
-	border-radius: 5px;
-}
+				 background-color:#ba2323;
+				 padding:10px;
+				 position:relative;
+				 font-family: 'Open Sans', sans-serif;
+				 font-size:12px;
+				 text-decoration:none;
+				 color:#fff;
+				 border: solid 1px #831212;
+				 background-image: linear-gradient(bottom, rgb(171,27,27) 0%, rgb(212,51,51) 100%);
+				 border-radius: 5px;
+             }
 
-.a_demo_one:active {
-	padding-bottom:9px;
-	padding-left:10px;
-	padding-right:10px;
-	padding-top:11px;
-	top:1px;
-	background-image: linear-gradient(bottom, rgb(171,27,27) 100%, rgb(212,51,51) 0%);
-}
+
+			 .a_demo_one:active {
+				 padding-bottom:9px;
+				 padding-left:10px;
+				 padding-right:10px;
+				 padding-top:11px;
+				 top:1px;
+				 background-image: linear-gradient(bottom, rgb(171,27,27) 100%, rgb(212,51,51) 0%);
+              }
 		</style>
 		<style>
             body{text-align:center}
@@ -72,7 +73,7 @@
 		
 		<h2>Login</h2>
 
-		<input type="button" value="Google Authentication" onclick="app.userLogin()">
+		<input class="a_demo_one" type="button" value="Google Authentication" onclick="app.userLogin()">
 
 		<!-- Footer -->
 
