Hook up live score board to app

--- a/app/roster.html
+++ b/app/roster.html
@@ -18,7 +18,7 @@
 		<a href="index.html">Home</a>
 		<a href="app.html">App</a>
 		<a href="#">Roster</a>
-		<button id="outcome" onclick="viewOutcome();">View Leaderboard</button>
+		<button id="outcome" onclick="viewOutcome();">View Match</button>
 		<button onclick="app.setMatchOutcome()">Finalize Match</button>
 
 		<h2>User Info</h2>
