Add player name in feed meta label

--- a/app/live.html
+++ b/app/live.html
@@ -58,6 +58,12 @@
 			#back-button {
 				display: inline-block;
 			}
+
+			.feed-meta {
+				opacity: 0.75;
+				font-size: 12px;
+			}
+
 		</style>
 
 	</head>
