Set feed styles

--- a/app/live.html
+++ b/app/live.html
@@ -22,7 +22,7 @@
 			}
 
 			span.spacer {
-				width: 50px;
+				width: 25px;
 				display: block;
 			}
 
@@ -62,6 +62,10 @@
 			.feed-meta {
 				opacity: 0.75;
 				font-size: 12px;
+			}
+
+			.feed-item {
+				margin-bottom: 15px;
 			}
 
 		</style>
