Build scouting interface

--- a/app/roster.html
+++ b/app/roster.html
@@ -49,6 +49,7 @@
 		<div id="allPlayers">
 			<h3>All Players</h3>
 			<p>Choose two consecutive players to add or drop a player from your roster</p>
+			<button id="scouting-button" onclick="openScoutingModule();">Scouting Reports</button>
 			<table>
 				<th>Ward <br><button v-on:click="ordering(0)">sort</button></th>
 				<th>Players <br><button v-on:click="ordering(1)">sort</button></th>
