Render with plotly

--- a/app/scout.html
+++ b/app/scout.html
@@ -22,51 +22,9 @@
 				display: none;
 			}
 
-			span.spacer {
-				width: 25px;
-				display: block;
-			}
-
-			table td {
-				padding-right: 10px;
-			}
-
-			.center {
-				text-align: center;
-			}
-
-			td.center {
-				width: 90px;
-			}
-
-			td.player-name {
-				width: 180px;
-			}
-
-			.board-container {
-				display: inline-block;
-				vertical-align: top;
-			}
-
-			#feed-container {
-				margin: 0 15px;
-			}
-
-			#leaderboard-container {
-				display: none;
-			}
-
-			#back-button {
-				display: inline-block;
-			}
-
-			.feed-meta {
-				opacity: 0.75;
-				font-size: 12px;
-			}
-
-			.feed-item {
-				margin-bottom: 15px;
+			#plot {
+				width: 100vw;
+				height: 400px;
 			}
 
 		</style>
@@ -94,6 +52,8 @@
 				<select id="player-selector"></select>
 				<button id="scouting-button">View</button>
 			</div>
+
+			<div id="plot"></div>
 
 		</section>
 
