Set up power rankings code

--- a/app/scout.html
+++ b/app/scout.html
@@ -24,7 +24,7 @@
 
 			#plot {
 				width: 100vw;
-				height: 400px;
+				height: 450px;
 			}
 
 		</style>
@@ -47,13 +47,13 @@
 		
 		<section id="page">
 
-			<div>
-				<h3>Player Scouting Reports</h3>
-				<select id="player-selector"></select>
-				<button id="scouting-button">View</button>
-			</div>
-
+			<h3>Score Predictions</h3>
+			<select id="player-selector"></select>
+			<button id="scouting-button">View</button>
 			<div id="plot"></div>
+
+			<!-- <h3>Power Rankings</h3>
+			<ol id="power-rankings"></ol> -->
 
 		</section>
 
