--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<link rel="stylesheet" type="text/css" href="app/temp-style.css">
 		<style>
 
+		html, body, section {
+			padding: 0;
+			margin: 0;
+		}
+
+		.center-vertical {
+
+		}
+
 		.center-horizontal {
 			text-align: center;
 		}
@@ -41,6 +50,39 @@
 			width: 150px;
 		}
 
+		section {
+			padding: 40px;
+			min-height: 50vh;
+			/* Center Vertically */
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+		}
+
+		section:nth-child(odd) {
+			background: rgba(44, 140, 153, 1);
+			color: white;
+		}
+
+		section:nth-child(even) {
+
+		}
+
+		p {
+			margin: 10px auto;
+			line-height: 20px;
+		}
+
+		button.cta-btn {
+			height: 40px;
+			line-height: 25px;
+			font-size: 20px;
+			font-weight: bold;
+			width: 200px;
+			display: block;
+			margin: 10px auto;
+		}
+
 		</style>
 
 	</head>
@@ -48,25 +90,41 @@
 		
 		<!-- Header -->
 
+	<section>
 		<h1>Fantasy Civics</h1>
 		<p>Fantasy Civics is a Fantasy Football-style game to encourage players to learn more about wards and alderman in Chicago.</p>
+	</section>
 
+	<section>
 		<h2>Who's My Alderman?</h2>
 		<p>Enter your address to find out:</p>
 		<input type="text" id="search-by-address" value="3300 S Federal Street">
+		<button id="search-by-button" class="cta-btn">Search</button>
+	</section>
 
+	<section>
 		<h2>Your Alderman Is...</h2>
-		<h3 id="your-alderman">...</h3>
+		<h1 id="your-alderman">...</h1>
+		<h4 id="your-ward">...</h4>
 		<p>...and last week in Fantasy Civics, they scored <span id="your-alderman-score">0</span> points.</p>
+	</section>
 
+	<section>
 		<h2>How Does Scoring Work?</h2>
 		<p>Scores are calculated weekly based on 311 requests. Completed 311 requests are worth +1 points and unfulfilled requests are worth -1 points. Here are the types of issues we score on:</p>
 		<h3>Ward <span id="your-ward-number"></span> Scoring Breakdown</h3>
 		<ul id="ward-score-breakdown"></ul>
 		<p>Your alderman doesn't directly deal with these issues, but this is a fun way to see how your ward responds to citizen requests.</p>
+	</section>
 
+	<section>
 		<h2>How Does the Game Work?</h2>
 		<p>Each player selects a team of alderman and is then matched up with an opponent to see whose team scores more points. You can have up to five alderman on your team, but only three can be starters.</p>
+		<p>The full game uses all 50 Chicago aldermen: you can acquire aldermen other than those shown above and trade with other players.</p>
+	</section>
+
+	<section>
+		<h2>Try it Out!</h2>
 		<p>When deciding your starting lineup, you see historical scores. Here are some aldermen and their scores for the first week of <span class="insert-month"></span>. Choose the three aldermen who you think will score the most points in the second week of <span class="insert-month"></span>.</p>
 		<div class="center-horizontal">
 			<div class="roster">
@@ -78,13 +136,14 @@
 				<table id="robot-roster"></table>
 			</div>
 		</div>
-		<p>The full game uses all 50 Chicago aldermen: you can acquire aldermen other than those shown above and trade with other players.</p>
 		<p>When you're happy with your roster, click below to find out how the teams score in the second week of <span class="insert-month"></span>.</p>
-		<button id="submit-roster">Who Wins?</button>
+		<button id="submit-roster" class="cta-btn">Who Wins?</button>
+	</section>
 
+	<section>
 		<h2>Sample Game Results</h2>
 		<p id="demo-outcome"></p>
-		<div>
+		<div class="center-horizontal">
 			<div class="roster">
 				<h4>Your Scores</h4>
 				<table id="visitor-result"></table>
@@ -94,14 +153,19 @@
 				<table id="robot-result"></table>
 			</div>
 		</div>
+	</section>
 
+	<section>
 		<h2>Play Fantasy Civics</h2>
 		<p>Now you know how to play Fantasy Civics! Get some friends, you can play a full game in 15 minutes!</p>
-		<button class="play-game">Play Now</button>
+		<button class="cta-btn play-game">Play Now</button>
+	</section>
 
+	<section>
 		<h2>Frequently Asked Questions</h2>
 		<h4>How do you win?</h4>
 		<p>You win the game by picking a team of high-scoring aldermen and winning the most matches in your league. You win in real life by learning about Chicago wards and getting involved in civics!</p>
+	</section>
 
 		<!-- Footer -->
 
