Style search input

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		div.roster table {
 			display: block;
-			margin: 0 auto;
+			margin: 10px 10px;
 			text-align: left;
 		}
 
@@ -47,7 +47,7 @@
 		}
 
 		div.roster table tr td:nth-child(1) {
-			width: 150px;
+			width: 120px;
 		}
 
 		section {
@@ -71,6 +71,22 @@
 		p {
 			margin: 10px auto;
 			line-height: 20px;
+		}
+
+		input {
+			width: 300px;
+			margin: 10px auto;
+			line-height: 30px;
+			font-size: 20px;
+			text-align: center;
+			outline: none;
+			border: none;
+			border-bottom: 2px solid rgba(59, 68, 75, 0.1);
+		}
+
+		input:hover, input:focus {
+			color: rgba(44, 140, 153, 1);
+			border-bottom: 2px solid rgba(44, 140, 153, 1);
 		}
 
 		button.cta-btn {
